--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -53,3 +53,29 @@ video{
 width:30%
 }
 
+@media only screen and (max-width: 600px) {
+
+
+.carousel-item {
+    height: 0vh!important;
+    min-height: 300px;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+}
+@media only screen and (max-width: 768px) {
+    
+.carousel-item {
+    height:0vh!important;
+    min-height: 300px;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+}
